<resources>
    <string name="app_name">BPM</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="nav_body_shape">눈바디</string>
    <string name="nav_studio">스튜디오</string>
    <string name="nav_lounge">라운지</string>
    <string name="nav_mypage">마이페이지</string>

    <string name="tab_hot">인기있는</string>
    <string name="tab_review">리뷰 맛집</string>
    <string name="tab_open">이번 달 오픈</string>

    <string name="main_add_body_shape">오늘의 눈바디 남기기</string>
    <string name="main_add_share">내 바디프로필 공유하기</string>
    <string name="main_add_ask">운동in에 질문하기</string>

    <string name="bodyshape_create">눈바디 앨범 생성하기</string>
    <string name="bodyshape_edit">수정하기</string>
    <string name="bodyshape_delete">삭제하기</string>

    <string name="lounge_tab_community">커뮤니티</string>
    <string name="lounge_tab_question">질문</string>
    <string name="lounge_add_community_post">커뮤니티 글 작성하기</string>
    <string name="lounge_add_question_post">운동인에게 질문하기</string>

    <string name="mypage_post">게시물</string>
    <string name="mypage_scrap">스크랩</string>
    <string name="mypage_content_history_bf">이전 바디프로필 모아보기</string>
    <string name="mypage_content_my_post">나의 커뮤니티 글</string>
    <string name="mypage_content_profile_edit">프로필 관리</string>
    <string name="mypage_content_history_post">나의 질문</string>
    <string name="mypage_content_scrapped_studio">스크랩한 스튜디오</string>
    <string name="mypage_content_notice">공지사항</string>
    <string name="mypage_content_edit_start_tab">시작 위치 변경</string>
    <string name="mypage_content_version_info">버전 정보</string>
    <string name="mypage_book_info_history">기록</string>
    <string name="mypage_book_info_guide">이번에는 제대로 준비해서 찍어보자!</string>
    <string name="mypage_notification">알림</string>
    <string name="mypage_notification_test_title"><b>닉네임</b> 님이 회원님의 질문에 \n답변을 남겼습니다.</string>

    <string name="mypage_edit_start_tab_title">시작 위치 변경하기</string>
    <string name="mypage_edit_start_tab_description">원하는 화면을 시작 화면으로 설정할 수 있어요</string>

    <string name="my_question_title">나의 질문</string>
    <string name="my_question_more_delete">삭제하기</string>

    <string name="my_post_title">나의 커뮤니티 게시글</string>

    <string name="kakao_app_key">ced602989810575b0c1d032415db11c8</string>

</resources>