<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/bind"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.team.bpm.presentation.ui.main.mypage.MyPageViewModel" />

        <import type="com.team.bpm.presentation.ui.main.mypage.MyPageContract.Event" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/action_bar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Font.Pretendard.Semibold.18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_mypage"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="액션바" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icon_noti"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginVertical="15dp"
                android:layout_marginEnd="18dp"
                android:background="@drawable/selector_icon_mypage_noti"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="@{() -> vm.onClickNotification()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                bind:selected="@{vm.state.isNewNotification}" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/gray_09"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/action_bar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/profile_image"
                    android:layout_width="76dp"
                    android:layout_height="76dp"
                    android:layout_marginTop="22dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    bind:image_url="@{vm.state.userImage}"
                    tools:src="@drawable/default_profile_image" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/profile_name"
                    style="@style/Font.Pretendard.Semibold.16"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:maxLines="1"
                    android:text="@{vm.state.userName}"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/profile_image"
                    tools:text="유저 이름" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/profile_description"
                    style="@style/Font.Pretendard.Medium.13"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="14dp"
                    android:text="@{vm.state.userDescription}"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/profile_name"
                    tools:text="바디프로필 텍스트" />

                <View
                    android:id="@+id/divider_profile"
                    android:layout_width="0dp"
                    android:layout_height="8dp"
                    android:layout_marginTop="24dp"
                    android:background="@color/gray_12"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/profile_description" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/content_my_post"
                    style="@style/Font.Pretendard.Medium.15"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:onClick="@{() -> vm.onClickMyPost()}"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="20.5dp"
                    android:text="@string/mypage_content_my_post"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider_profile" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/content_history_post"
                    style="@style/Font.Pretendard.Medium.15"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:onClick="@{() -> vm.onClickMyQuestion()}"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="20.5dp"
                    android:text="@string/mypage_content_history_post"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/content_my_post" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/content_scrapped_studio"
                    style="@style/Font.Pretendard.Medium.15"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:onClick="@{() -> vm.onClickScrappedStudios()}"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="20.5dp"
                    android:text="@string/mypage_content_scrapped_studio"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/content_history_post" />

                <View
                    android:id="@+id/divider_history_post"
                    android:layout_width="0dp"
                    android:layout_height="8dp"
                    android:background="@color/gray_12"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/content_scrapped_studio" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/content_manage_profile"
                    style="@style/Font.Pretendard.Medium.15"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:onClick="@{() -> vm.onClickProfile()}"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="20.5dp"
                    android:text="@string/mypage_content_profile_edit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider_history_post" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/content_edit_start_tab"
                    style="@style/Font.Pretendard.Medium.15"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:onClick="@{() -> vm.onClickSetStartTab()}"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="20.5dp"
                    android:text="@string/mypage_content_edit_start_tab"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/content_manage_profile" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/content_notice"
                    style="@style/Font.Pretendard.Medium.15"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:onClick="@{() -> vm.onClickNotice()}"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="20.5dp"
                    android:text="@string/mypage_content_notice"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/content_edit_start_tab" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/content_version"
                    style="@style/Font.Pretendard.Medium.15"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:onClick="@{() -> vm.onClickVersion()}"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="20.5dp"
                    android:text="@string/mypage_content_version_info"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/content_notice" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/content_version" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>